# 3DShower

./: CMakeLists.txt  MyApp.qml  README.md  build.sh  main.cpp  qml.qrc
install/include/DUtility/: SystemEnv.h
lib/: CMakeLists.txt
lib/DUtility/: CMakeLists.txt
lib/DUtility/include/: export_api.h
lib/DUtility/src/: SystemEnv.cpp
screen/: CMakeLists.txt  Main.qml  Main.qrc
screen/qml/: Ctrl.qml  Main.qrc  Show.qml
screen/src/: test.cpp
